# QuanticChess

./: .gitignore  CMakeLists.txt  README.md  exemplo_analise.json  visualizador_web.html
include/: GeometricState.h  analysis_api.h  bitboard.h  geometric_algebra.h  geometric_evaluator.h  magic_bitboards.h
src/: analysis_api.cpp  bitboard.cpp  geometric_algebra.cpp  geometric_evaluator.cpp  magic_bitboards.cpp  main.cpp
